<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Villa Salute</string>
    <string name="action_accept">Confirmar</string>
    <string name="action_consulta_clientes">Clientes</string>
    <string name="action_editar">Editar</string>
    <string name="action_enviar">Enviar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_novo">Novo</string>
    <string name="clausula_where">WHERE</string>
    <string name="condition_primary_key">IdCliente = ?</string>
    <string name="content_description">imagem</string>
    <string name="database_name">SETTE.db</string>
    <string name="situacao_enviado">1</string>
    <string name="situacao_enviado_descricao">Enviado</string>
    <string name="situacao_enviando">2</string>
    <string name="situacao_enviando_descricao">Enviando</string>
    <string name="situacao_nao_enviado">3</string>
    <string name="msg_erro_campanha_ja_enviada">A campanha já foi enviada para todos os clientes</string>
    <string name="msg_erro_campo_obrigatorio">Campo {1} obrigatório(a)</string>
    <string name="msg_erro_insertUpdate">Nenhuma linha afetada</string>
    <string name="msg_erro_operacao_nao_realizada">Ocorreu um erro e a operação não foi realizada. Contate o administrador.</string>
    <string name="msg_erro_registro_inexistente">Registro inexistente</string>
    <string name="msg_erro_selecione_imagem">Selecione uma imagem</string>
    <string name="msg_erro_selecione_item">Selecione pelo menos um item</string>
    <string name="msg_operacao_sucesso">Operação realizada por sucesso</string>
    <string name="msg_sair_aplicativo">Tem certeza que quer sair do aplicativo?</string>
    <string name="order_by_nome">ORDER BY DsNome ASC</string>
    <string name="order_by_descricao_campanha">ORDER BY DsCampanha ASC</string>
    <string name="prefix_method_set">set</string>
    <string name="prefix_method_get">get</string>
    <string name="string_empty"></string>
    <string name="string_field_descricao">Descrição</string>
    <string name="string_field_mensagem">Mensagem</string>
    <string name="string_hint_telefone">DDD + Telefone</string>
    <string name="string_label_clientes">Clientes:</string>
    <string name="string_label_descricao">Descrição:</string>
    <string name="string_label_direto">Direto</string>
    <string name="string_label_email">Email:</string>
    <string name="string_label_envio">Envio:</string>
    <string name="string_label_imagem">Imagem</string>
    <string name="string_label_manual">Manual</string>
    <string name="string_label_tipo_mensagem">Tipo de Mensagem:</string>
    <string name="string_label_mensagem">Mensagem:</string>
    <string name="string_label_nome">Nome:</string>
    <string name="string_label_procurar">Procurar</string>
    <string name="string_label_situacao">Situação:</string>
    <string name="string_label_telefone">Telefone:</string>
    <string name="string_label_texto">Texto</string>
    <string name="string_padrao">informação a ser exibida do banco de dados</string>
    <string name="string_separator">, </string>
    <string name="table_cliente">tCliente</string>
    <string name="table_campanha">tCampanha</string>
    <string name="table_campanha_cliente">tCampanhaCliente</string>
    <string name="table_situacao">tSituacao</string>
    <string name="table_column_descricao_campanha">DsCampanha</string>
    <string name="table_column_email">DsEmail</string>
    <string name="table_column_identificador_campanha">IdCampanha</string>
    <string name="table_column_identificador_cliente">IdCliente</string>
    <string name="table_column_identificador_situacao">IdSituacao</string>
    <string name="table_column_nome">DsNome</string>
    <string name="table_column_telefone">DsTelefone</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_sair_aplicativo">Sair aplicativo</string>

</resources>