<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblTipoMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/string_label_mensagem"
        android:textAppearance="@style/TextMediumBlue" />

    <RadioGroup
        android:id="@+id/rdgTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTipoMensagem"
        android:layout_alignStart="@+id/lblTipoMensagem"
        android:layout_below="@+id/lblTipoMensagem"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbtTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_texto"
            android:textAppearance="@style/TextMediumBlue" />

        <RadioButton
            android:id="@+id/rbtImagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_imagem"
            android:textAppearance="@style/TextMediumBlue" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rdgTipo"
        android:layout_alignStart="@+id/rdgTipo"
        android:layout_below="@+id/rdgTipo"
        android:layout_marginTop="5dp"
        android:ems="15"
        android:inputType="textMultiLine"
        android:maxLength="250"
        android:textAppearance="@style/TextMediumOrange" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnImagem"
        android:layout_alignStart="@+id/btnImagem"
        android:layout_below="@+id/btnImagem"
        android:contentDescription="@string/content_description" />

</RelativeLayout>