<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblTipoEnvio"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/string_label_envio"
        android:textAppearance="@style/TextMediumBlue" />

    <RadioGroup
        android:id="@+id/rdgEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTipoEnvio"
        android:layout_alignStart="@+id/lblTipoEnvio"
        android:layout_below="@+id/lblTipoEnvio"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbtAutomatico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_direto"
            android:textAppearance="@style/TextMediumBlue" />

        <RadioButton
            android:id="@+id/rbtManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_manual"
            android:textAppearance="@style/TextMediumBlue" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rdgEnvio"
        android:layout_alignStart="@+id/rdgEnvio"
        android:layout_below="@+id/rdgEnvio"
        android:layout_marginTop="20dp"
        android:text="@string/string_label_clientes"
        android:textAppearance="@style/TextMediumBlue" />

    <GridView
        android:id="@+id/grid_clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblClientes"
        android:horizontalSpacing="10dp"
        android:numColumns="1"
        android:verticalSpacing="1dp" >
    </GridView>

</RelativeLayout>