<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.luksfon.villasalute.campanha.view.VisualizarCampanhaActivity" >

    <ImageView
        android:id="@+id/imgSituacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_action_group" />

    <TextView
        android:id="@+id/lblDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/imgSituacao"
        android:layout_toRightOf="@+id/imgSituacao"
        android:text="@string/string_label_descricao"
        android:textAppearance="@style/TextMediumBlue" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDescricao"
        android:layout_alignStart="@+id/lblDescricao"
        android:layout_below="@+id/lblDescricao"
        android:layout_marginTop="2dp"
        android:text="@string/string_padrao"
        android:textAppearance="@style/TextMediumOrange" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescricao"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/lblMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescricao"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_label_mensagem"
        android:textAppearance="@style/TextMediumBlue" />

    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblMensagem"
        android:layout_alignStart="@+id/lblMensagem"
        android:layout_below="@+id/lblMensagem"
        android:layout_marginTop="2dp"
        android:text="@string/string_padrao"
        android:textAppearance="@style/TextMediumOrange" />

    <TextView
        android:id="@+id/lblClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMensagem"
        android:layout_alignStart="@+id/txtMensagem"
        android:layout_below="@+id/txtMensagem"
        android:layout_marginTop="20dp"
        android:text="@string/string_label_clientes"
        android:textAppearance="@style/TextMediumBlue" />

    <ListView
        android:id="@+id/grid_clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblClientes"
        android:layout_alignStart="@+id/lblClientes"
        android:layout_below="@+id/lblClientes"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:divider="#fff3f3f3"
        android:dividerHeight="3dp"
        android:numColumns="1" >
    </ListView>

</RelativeLayout>