<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luksfon.villasalute.campanha.view.CadastrarClienteActivity" >

    <TextView
        android:id="@+id/lblNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_label_nome"
        android:textAppearance="@style/TextMediumBlue" />
    
    <EditText
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblNome"
        android:layout_alignStart="@+id/lblNome"
        android:layout_below="@+id/lblNome"
        android:layout_marginTop="5dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:textAppearance="@style/TextMediumOrange" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNome"
        android:layout_alignStart="@+id/txtNome"
        android:layout_below="@+id/txtNome"
        android:layout_marginTop="15dp"
        android:text="@string/string_label_telefone"
        android:textAppearance="@style/TextMediumBlue" />

    <EditText
        android:id="@+id/lblTelefone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTelefone"
        android:layout_alignStart="@+id/lblTelefone"
        android:layout_below="@+id/lblTelefone"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/string_hint_telefone"
        android:inputType="phone"
        android:maxLength="14"
        android:textAppearance="@style/TextMediumOrange" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTelefone1"
        android:layout_alignStart="@+id/lblTelefone1"
        android:layout_below="@+id/lblTelefone1"
        android:layout_marginTop="20dp"
        android:text="@string/string_label_email"
        android:textAppearance="@style/TextMediumBlue" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblEmail"
        android:layout_alignStart="@+id/lblEmail"
        android:layout_below="@+id/lblEmail"
        android:layout_marginTop="5dp"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:maxLength="150"
        android:textAppearance="@style/TextMediumOrange" />

</RelativeLayout>